- Fix z-index issue with calendar button when a modal is up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -442,7 +442,7 @@ button[disabled]{
   position: absolute;
   left: 0;
   bottom: 0;
-  z-index: 900;
+  z-index: 100;
   image-rendering: -webkit-optimize-contrast;
   -ms-interpolation-mode: nearest-neighbor;
   padding: 0px !important;
